--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@nextcloud/moment": "^1.1.1",
     "@nextcloud/paths": "^1.1.2",
     "@nextcloud/router": "^1.1.0",
-    "@nextcloud/vue": "^3.5.4",
+    "@nextcloud/vue": "^3.6.0",
     "@raruto/leaflet-elevation": "^1.5.1",
     "axios": "^0.21.0",
     "d3": "^5.15.0",
@@ -55,11 +55,11 @@
     "leaflet.locatecontrol": "^0.72.2",
     "leaflet.markercluster": "^1.4.0",
     "lrm-graphhopper": "^1.3.0",
-    "mapbox-gl": "^2.1.0",
+    "mapbox-gl": "^2.1.1",
     "mapbox-gl-leaflet": "^0.0.14",
     "nouislider": "^14.0.2",
     "opening_hours": "^3.5.0",
-    "ua-parser-js": "^0.7.23",
+    "ua-parser-js": "^0.7.24",
     "vue": "^2.6.12",
     "vue-click-outside": "^1.1.0",
     "vue-clipboard2": "^0.3.1",
@@ -69,47 +69,48 @@
     "vuex": "^3.6.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.13",
-    "@babel/eslint-parser": "^7.12.13",
-    "@babel/plugin-proposal-object-rest-spread": "^7.12.13",
+    "@babel/core": "^7.13.8",
+    "@babel/eslint-parser": "^7.13.8",
+    "@babel/plugin-proposal-object-rest-spread": "^7.13.8",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.12.13",
-    "@nextcloud/browserslist-config": "^1.0.0",
+    "@babel/preset-env": "^7.13.9",
+    "@nextcloud/browserslist-config": "^2.0.0",
     "@nextcloud/eslint-config": "^3.0.0",
     "@nextcloud/eslint-plugin": "^2.0.0",
     "@nextcloud/webpack-vue-config": "^2.0.0",
     "@types/leaflet": "^1.5.4",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "country-language": "^0.1.7",
-    "css-loader": "^5.0.1",
-    "eslint": "^7.19.0",
+    "css-loader": "^5.1.1",
+    "eslint": "^7.21.0",
     "eslint-config-standard": "^16.0.1",
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-vue": "^7.5.0",
-    "eslint-webpack-plugin": "^2.5.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-vue": "^7.7.0",
+    "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "^6.2.0",
     "i18next-client": "^1.11.4",
     "jest": "^26.4.2",
     "jest-serializer-vue": "^2.0.2",
     "jsdom": "^16.4.0",
     "jsdom-global": "^3.0.2",
-    "lodash": "^4.17.20",
+    "lodash": "^4.17.21",
     "node-sass": "^5.0.0",
     "raw-loader": "^4.0.1",
-    "sass-loader": "^11.0.0",
+    "sass-loader": "^11.0.1 ",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.9.0",
+    "stylelint": "^13.11.0",
     "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-scss": "^3.18.0",
+    "stylelint-scss": "^3.19.0",
     "stylelint-webpack-plugin": "^2.1.1",
     "url-loader": "^4.1.0",
     "vue-loader": "^15.9.3",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^5.21.1",
+    "webpack": "^5.24.2",
     "webpack-cli": "^4.5.0",
     "webpack-merge": "^5.6.1"
   }
