--- a/package.json
+++ b/package.json
@@ -75,15 +75,15 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.14.7",
     "@nextcloud/browserslist-config": "^2.1.0",
-    "@nextcloud/eslint-config": "^3.0.0",
+    "@nextcloud/eslint-config": "^5.1.0",
     "@nextcloud/eslint-plugin": "^2.0.0",
-    "@nextcloud/webpack-vue-config": "^2.0.0",
+    "@nextcloud/webpack-vue-config": "^4.0.3",
     "@types/leaflet": "^1.5.4",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "country-language": "^0.1.7",
-    "css-loader": "^5.2.6",
+    "css-loader": "^4.3.0",
     "eslint": "^7.29.0",
     "eslint-config-standard": "^16.0.3",
     "eslint-friendly-formatter": "^4.0.1",
@@ -99,9 +99,11 @@
     "jsdom": "^16.6.0",
     "jsdom-global": "^3.0.2",
     "lodash": "^4.17.21",
+    "node-polyfill-webpack-plugin": "^1.1.3",
     "node-sass": "^5.0.0",
     "raw-loader": "^4.0.1",
-    "sass-loader": "^11.1.1",
+    "sass": "^1.35.1",
+    "sass-loader": "^10.2.0",
     "style-loader": "^2.0.0",
     "stylelint": "^13.13.1",
     "stylelint-config-recommended-scss": "^4.2.0",
