--- a/package.json
+++ b/package.json
@@ -51,13 +51,13 @@
     "geojson": "^0.5.0",
     "leaflet": "1.5.1",
     "leaflet-contextmenu": "^1.4.0",
-    "leaflet-control-geocoder": "^2.1.0",
+    "leaflet-control-geocoder": "2.1.0",
     "leaflet-easybutton": "^2.4.0",
     "leaflet-mouse-position": "^1.0.4",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet.featuregroup.subgroup": "^1.0.2",
     "leaflet.locatecontrol": "^0.72.2",
-    "leaflet.markercluster": "^1.4.0",
+    "leaflet.markercluster": "1.4.1",
     "lrm-graphhopper": "^1.3.0",
     "mapbox-gl": "^2.1.1",
     "mapbox-gl-leaflet": "^0.0.14",
@@ -79,11 +79,10 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.15.0",
     "@nextcloud/browserslist-config": "^2.1.0",
-    "@nextcloud/eslint-config": "^5.1.0",
+    "@nextcloud/eslint-config": "^6.1.0",
     "@nextcloud/eslint-plugin": "^2.0.0",
     "@nextcloud/webpack-vue-config": "^4.1.0",
     "@types/leaflet": "^1.5.4",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "country-language": "^0.1.7",
     "css-loader": "^4.3.0",
@@ -92,7 +91,7 @@
     "eslint-friendly-formatter": "^4.0.1",
     "eslint-plugin-import": "^2.24.1",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^7.16.0",
     "eslint-webpack-plugin": "^2.5.4",
     "file-loader": "^6.2.0",
