--- a/package.json
+++ b/package.json
@@ -1,122 +1,83 @@
 {
-  "name": "maps",
-  "version": "0.0.7",
-  "description": "Maps app",
-  "main": "main.js",
-  "directories": {
-    "test": "tests"
-  },
-  "scripts": {
-    "dev": "NODE_ENV=development npx webpack --progress --config webpack.js",
-    "watch": "NODE_ENV=development npx webpack --progress --watch --config webpack.js",
-    "build": "NODE_ENV=production npx webpack --progress --config webpack.js",
-    "lint": "eslint --ext .js,.vue src",
-    "lint:fix": "eslint --ext .js,.vue src --fix",
-    "stylelint": "stylelint **/*.css **/*.scss **/*.vue",
-    "stylelint:fix": "stylelint **/*.css **/*.scss **/*.vue --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/nextcloud/maps.git"
-  },
-  "keywords": [
-    "maps"
-  ],
-  "author": "Vinzenz Rosenkranz",
-  "license": "AGPL-3.0",
-  "bugs": {
-    "url": "https://github.com/nextcloud/maps/issues"
-  },
-  "homepage": "https://github.com/nextcloud/maps",
-  "browserslist": [
-    "extends @nextcloud/browserslist-config"
-  ],
-  "engines": {
-    "node": ">=14.0.0",
-    "npm": ">=7.0.0"
-  },
-  "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@nextcloud/auth": "^1.3.0",
-    "@nextcloud/axios": "^1.6.0",
-    "@nextcloud/dialogs": "^3.1.2",
-    "@nextcloud/l10n": "^1.4.1",
-    "@nextcloud/moment": "^1.1.1",
-    "@nextcloud/paths": "^2.0.0",
-    "@nextcloud/router": "^2.0.0",
-    "@nextcloud/vue": "^4.0.3",
-    "@raruto/leaflet-elevation": "^1.5.1",
-    "axios": "^0.21.0",
-    "d3": "^5.15.0",
-    "geojson": "^0.5.0",
-    "leaflet": "1.5.1",
-    "leaflet-contextmenu": "^1.4.0",
-    "leaflet-control-geocoder": "2.1.0",
-    "leaflet-easybutton": "^2.4.0",
-    "leaflet-mouse-position": "^1.0.4",
-    "leaflet-routing-machine": "^3.2.12",
-    "leaflet.featuregroup.subgroup": "^1.0.2",
-    "leaflet.locatecontrol": "^0.72.2",
-    "leaflet.markercluster": "1.4.1",
-    "lrm-graphhopper": "^1.3.0",
-    "mapbox-gl": "^2.1.1",
-    "mapbox-gl-leaflet": "^0.0.14",
-    "nouislider": "^14.0.2",
-    "opening_hours": "^3.5.0",
-    "ua-parser-js": "^0.7.28",
-    "vue": "^2.6.14",
-    "vue-click-outside": "^1.1.0",
-    "vue-clipboard2": "^0.3.1",
-    "vue-types": "^2.0.3",
-    "vue2-leaflet": "^2.6.0",
-    "vue2-leaflet-markercluster": "^3.1.0",
-    "vuex": "^3.6.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.15.0",
-    "@babel/eslint-parser": "^7.15.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.14.7",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/preset-env": "^7.15.0",
-    "@nextcloud/browserslist-config": "^2.1.0",
-    "@nextcloud/eslint-config": "^6.1.0",
-    "@nextcloud/eslint-plugin": "^2.0.0",
-    "@nextcloud/webpack-vue-config": "^4.1.0",
-    "@types/leaflet": "^1.5.4",
-    "babel-loader": "^8.2.2",
-    "country-language": "^0.1.7",
-    "css-loader": "^4.3.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-plugin-import": "^2.24.1",
-    "eslint-plugin-jsdoc": "^36.0.7",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-vue": "^7.16.0",
-    "eslint-webpack-plugin": "^2.5.4",
-    "file-loader": "^6.2.0",
-    "i18next-client": "^1.11.4",
-    "jest": "^26.4.2",
-    "jest-serializer-vue": "^2.0.2",
-    "jsdom": "^16.7.0",
-    "jsdom-global": "^3.0.2",
-    "lodash": "^4.17.21",
-    "node-polyfill-webpack-plugin": "^1.1.4",
-    "node-sass": "^5.0.0",
-    "raw-loader": "^4.0.1",
-    "sass": "^1.38.0",
-    "sass-loader": "^10.2.0",
-    "style-loader": "^2.0.0",
-    "stylelint": "^13.13.1",
-    "stylelint-config-recommended-scss": "^4.3.0",
-    "stylelint-scss": "^3.20.1",
-    "stylelint-webpack-plugin": "^2.2.2",
-    "url-loader": "^4.1.0",
-    "vue-loader": "^15.9.8",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.51.1",
-    "webpack-cli": "^4.8.0",
-    "webpack-merge": "^5.8.0"
-  }
+	"name": "maps",
+	"version": "0.0.7",
+	"description": "Maps app",
+	"main": "main.js",
+	"directories": {
+		"test": "tests"
+	},
+	"scripts": {
+		"dev": "NODE_ENV=development npx webpack --progress --config webpack.js",
+		"watch": "NODE_ENV=development npx webpack --progress --watch --config webpack.js",
+		"build": "NODE_ENV=production npx webpack --progress --config webpack.js",
+		"lint": "eslint --ext .js,.vue src",
+		"lint:fix": "eslint --ext .js,.vue src --fix",
+		"stylelint": "stylelint **/*.css **/*.scss **/*.vue",
+		"stylelint:fix": "stylelint **/*.css **/*.scss **/*.vue --fix"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/nextcloud/maps.git"
+	},
+	"keywords": [
+		"maps"
+	],
+	"author": "Vinzenz Rosenkranz",
+	"license": "AGPL-3.0",
+	"bugs": {
+		"url": "https://github.com/nextcloud/maps/issues"
+	},
+	"homepage": "https://github.com/nextcloud/maps",
+	"browserslist": [
+		"extends @nextcloud/browserslist-config"
+	],
+	"engines": {
+		"node": ">=14.0.0",
+		"npm": ">=7.0.0"
+	},
+	"dependencies": {
+		"@fortawesome/fontawesome-free": "^5.15.4",
+		"@nextcloud/auth": "^1.3.0",
+		"@nextcloud/axios": "^1.9.0",
+		"@nextcloud/dialogs": "^3.1.2",
+		"@nextcloud/l10n": "^1.4.1",
+		"@nextcloud/moment": "^1.1.1",
+		"@nextcloud/paths": "^2.1.0",
+		"@nextcloud/router": "^2.0.0",
+		"@nextcloud/vue": "^5.1.0",
+		"@raruto/leaflet-elevation": "^1.5.1",
+		"axios": "^0.26.1",
+		"d3": "^5.15.0",
+		"geojson": "^0.5.0",
+		"leaflet": "^1.7.1",
+		"leaflet-contextmenu": "^1.4.0",
+		"leaflet-control-geocoder": "2.1.0",
+		"leaflet-easybutton": "^2.4.0",
+		"leaflet-mouse-position": "^1.0.4",
+		"leaflet-routing-machine": "^3.2.12",
+		"leaflet.featuregroup.subgroup": "^1.0.2",
+		"leaflet.locatecontrol": "^0.72.2",
+		"leaflet.markercluster": "^1.5.3",
+		"lrm-graphhopper": "^1.3.0",
+		"mapbox-gl": "^2.1.1",
+		"mapbox-gl-leaflet": "^0.0.14",
+		"nouislider": "^14.0.2",
+		"opening_hours": "^3.5.0",
+		"ua-parser-js": "^0.7.28",
+		"vue": "^2.6.14",
+		"vue-click-outside": "^1.1.0",
+		"vue-clipboard2": "^0.3.1",
+		"vue-types": "^2.0.3",
+		"vue2-leaflet": "^2.6.0",
+		"vue2-leaflet-markercluster": "^3.1.0",
+		"vuex": "^3.6.2"
+	},
+	"devDependencies": {
+		"@nextcloud/babel-config": "^1.0.0",
+		"@nextcloud/browserslist-config": "^2.2.0",
+		"@nextcloud/eslint-config": "^7.0.2",
+		"@nextcloud/stylelint-config": "^2.0.1",
+		"@nextcloud/webpack-vue-config": "^5.0.0",
+		"@types/leaflet": "^1.5.4"
+	}
 }
