--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,12 @@
         "bogdaan/open-location-code": "dev-master"
     },
     "require-dev": {
-        "christophwurst/nextcloud_testing": "^0.9.1"
-    }
+        "christophwurst/nextcloud_testing": "^0.12.4"
+    },
+	"scripts": {
+		"test:integration": "phpunit -c tests/phpunit.integration.xml --fail-on-warning",
+		"test:integration:dev": "phpunit -c tests/phpunit.integration.xml --no-coverage --order-by=defects --stop-on-defect --fail-on-warning --stop-on-error --stop-on-failure",
+		"test:unit": "phpunit -c tests/phpunit.unit.xml --fail-on-warning",
+		"test:unit:dev": "phpunit -c tests/phpunit.unit.xml --no-coverage --order-by=defects --stop-on-defect --fail-on-warning --stop-on-error --stop-on-failure"
+	}
 }
