--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -47,6 +47,9 @@ jobs:
             - name: Install dependencies
               working-directory: nextcloud/apps/maps
               run: composer install
+            - name: Enable maps app
+              working-directory: nextcloud
+              run: php -f occ app:enable maps
             - name: Run tests
               working-directory: nextcloud/apps/maps
               run: composer run test:unit
