--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@nextcloud/moment": "^1.1.1",
 		"@nextcloud/paths": "^2.1.0",
 		"@nextcloud/router": "^2.0.0",
+		"@nextcloud/sharing": "^0.1.0",
 		"@nextcloud/vue": "^5.1.0",
 		"@raruto/leaflet-elevation": "^1.7.0",
 		"axios": "^0.26.1",
