--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,16 +13,8 @@ jobs:
         strategy:
             matrix:
                 php-versions: [7.4, 8.0]
-                nextcloud-versions: ['stable21', 'stable22', 'stable23']
+                nextcloud-versions: ['stable22', 'stable23', 'stable24', 'master']
                 include:
-                    - php-versions: 7.4
-                      nextcloud-versions: stable24
-                    - php-versions: 8.0
-                      nextcloud-versions: stable24
-                    - php-versions: 7.4
-                      nextcloud-versions: master
-                    - php-versions: 8.0
-                      nextcloud-versions: master
         name: Nextcloud ${{ matrix.nextcloud-versions }} php${{ matrix.php-versions }} unit tests
         steps:
             - name: Set up php${{ matrix.php-versions }}
