--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,8 +13,10 @@ jobs:
         strategy:
             matrix:
                 php-versions: [7.4, 8.0]
-                nextcloud-versions: ['stable22', 'stable23', 'stable24', 'master']
+                nextcloud-versions: ['stable22', 'stable23', 'stable24']
                 include:
+                    - php-versions: 8.0
+                      nextcloud-versions: master
         name: Nextcloud ${{ matrix.nextcloud-versions }} php${{ matrix.php-versions }} unit tests
         steps:
             - name: Set up php${{ matrix.php-versions }}
