--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "lrm-graphhopper": "^1.3.0",
     "mapbox-gl": "^2.12.0",
     "mapbox-gl-leaflet": "^0.0.15",
+    "moment-timezone": "^0.5.40",
     "nouislider": "^15.6.1",
     "opening_hours": "^3.8.0",
     "ua-parser-js": "^1.0.33",
