--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "leaflet-mouse-position": "^1.0.4",
     "leaflet-routing-machine": "^3.2.12",
     "leaflet.featuregroup.subgroup": "^1.0.2",
+    "leaflet.heat": "^0.2.0",
     "leaflet.locatecontrol": "^0.79.0",
     "leaflet.markercluster": "^1.5.3",
     "lrm-graphhopper": "^1.3.0",
