--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,11 @@ jobs:
         runs-on: ubuntu-latest
         strategy:
             matrix:
-                php-versions: [7.4, 8.0, 8.1, 8.2]
+                php-versions: [7.4, 8.0, 8.1]
                 nextcloud-versions: ['stable25']
+                include:
+                    -   php-versions: 8.2
+                        nextcloud-versions: master
         name: Nextcloud ${{ matrix.nextcloud-versions }} php${{ matrix.php-versions }} unit tests
         steps:
             - name: Set up php${{ matrix.php-versions }}
