--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
+    "@maplibre/maplibre-gl-leaflet": "^0.0.19",
     "@nextcloud/auth": "^2.0.0",
     "@nextcloud/axios": "^2.3.0",
     "@nextcloud/dialogs": "^4.0.1",
@@ -63,6 +64,7 @@
     "lrm-graphhopper": "^1.3.0",
     "mapbox-gl": "^2.4.1",
     "mapbox-gl-leaflet": "^0.0.15",
+    "maplibre-gl": "^2.4.0",
     "nouislider": "^15.7.0",
     "opening_hours": "^3.8.0",
     "ua-parser-js": "^1.0.34",
