--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "ua-parser-js": "^1.0.37",
     "vue": "^2.7.15",
     "vue-click-outside": "^1.1.0",
+    "vue-material-design-icons": "^5.2.0",
     "vue-types": "^5.1.1",
     "vue2-leaflet": "^2.6.0",
     "vue2-leaflet-markercluster": "^3.1.0",
